* Added admin scripts for convenient branch management.
* Updated TODO.
* Added doctest for buildParameters.
* Updated the RRD class to take a backend parameter in the constructor and
modified the class to reference this assigned attribute in the rest of its
methods.
* Started putting together the bindings module.
* Cleaned up the part of the README that has the new bindings instructions in
it.

2009.03.26

* Moved meta data out of setup.py and into pyrrd.meta.
* Added docs directory and split docs out of README and added more info.
* Moved pyrrd/utils.py to pyrrd/util/__init__.py.
* Added pyrrd.util.dist.
* Updated setup.py to use meta as well as the new dist utility.
* Moved INSTALL content into README.
* Moved acknowledgements out of README and into their own file.
* Added file cleanups in doctests.
* Updated MANIFEST to include new docs and removed references to files that no
longer exist.
* Tweaked setup.py and dist module.
* Cleaned up parts of README that were causing problems in ReST rendering on
PyPI.
* Created an uploader for PyPI dists.

2009.03.23

* Added a file manifest so that files don't get left out during build process.
* Updated setup.py.
* Updated TODO.
* Incremented microversion to 0.0.6 since this is a bug fix (manifest file).
* Really incremented version.

2009.03.21

* Received the following fixes from Aaron Westendorf of Agora Games:
  - Moved pyrrd.xml to pyrrd.__xml to not conflict with stdlib xml namespace.
  - Fixed loading of existing RRDs when expected attributes are not there,
    specifically when RRAs are for Holt-Winters.
* Renamed __xml to node.
* Updated unit tests.
* Added missing docstrings.
* Formatted contributed code.
* Removed the Agora notes file
* Updated version.
* Added a dist-building script.
* Updated the clean script.
* Incremented microversion number to 0.0.5 (committed this change earlier).
* Updated acknowledgements section in README.
* Updated install instructions with a note about a conditional dependency.
