@@ -5,8 +5,9 @@ from utils import buildDoctestSuite
 
 # to add a new module to the test runner, simply include is in the list below:
 modules = [
-    "pyrrd.bindings",
-    "pyrrd.external",
+    "pyrrd.backend.bindings",
+    "pyrrd.backend.common",
+    "pyrrd.backend.external",
     "pyrrd.graph",
     "pyrrd.node",
     "pyrrd.rrd",
